- mobile nav overflow fix

--- a/assets/scss/components/_nav.scss
+++ b/assets/scss/components/_nav.scss
@@ -94,6 +94,7 @@
         width: 100%;
         padding: 0;
         font-family: $font_secondary;
+        overflow: hidden;
         @media (min-width: $tabletSize) {
           flex-direction: row;
         }
